fix(jdk): jdk updating to version 17